--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <color name="colorRed">#df3470</color>
     <color name="alabaster">#FAFAFA</color>
     <color name="oslo_gray">#95989A</color>
+    <color name="boulder">#7E7C7C</color>
+    <color name="orange_a200">#FBB040</color>
+
+
 </resources>
