--- a/app/src/main/res/layout/activity_detail_history_purchase.xml
+++ b/app/src/main/res/layout/activity_detail_history_purchase.xml
@@ -45,11 +45,12 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/no_invoice_detail_purchase"
                 style="@style/TextRegular"
                 android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginTop="@dimen/margin_space"
                 android:layout_marginEnd="@dimen/margin_space"
-                android:text="Terimakasih telah berbelanja di Kawarung. Transaksi anda dengan invoice INV000052 telah dicatat"
+                tools:text="Terimakasih telah berbelanja di Kawarung. Transaksi anda dengan invoice INV000052 telah dicatat"
                 android:textSize="14sp" />
 
             <TextView
@@ -61,6 +62,7 @@
                 android:textColor="@color/boulder" />
 
             <TextView
+                android:id="@+id/deadline_invoice"
                 style="@style/TextSemiBold"
                 android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginEnd="@dimen/margin_space"
@@ -76,6 +78,7 @@
                 android:textColor="@color/boulder" />
 
             <TextView
+                android:id="@+id/total_payment_detail_history_purchase"
                 style="@style/TextSemiBold"
                 android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginEnd="@dimen/margin_space"
@@ -101,7 +104,7 @@
                     android:layout_width="90dp"
                     android:layout_height="56dp"
                     android:layout_marginStart="10dp"
-                    android:src="@drawable/mandiri" />
+                    android:src="@drawable/makanan_minuman" />
 
                 <TextView
                     android:id="@+id/bank_name_of_logo"
@@ -246,14 +249,14 @@
                     android:textColor="@color/colorWhite" />
 
                 <TextView
-                    android:id="@+id/qty_checkout"
+                    android:id="@+id/qty_detail_history_purchase"
                     style="@style/TextRegular"
                     android:layout_alignParentEnd="true"
                     android:text="1"
                     android:textColor="@color/colorWhite" />
 
                 <TextView
-                    android:id="@+id/price_sub_total"
+                    android:id="@+id/price_sub_total_history_purchase"
                     style="@style/TextRegular"
                     android:layout_below="@+id/tv_total_qty"
                     android:layout_alignParentEnd="true"
@@ -262,18 +265,18 @@
                     android:textColor="@color/colorWhite" />
 
                 <TextView
-                    android:id="@+id/price_postal_fee"
+                    android:id="@+id/price_postal_fee_history_purchase"
                     style="@style/TextRegular"
-                    android:layout_below="@+id/price_sub_total"
+                    android:layout_below="@+id/price_sub_total_history_purchase"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
                     android:text="Rp10.000"
                     android:textColor="@color/colorWhite" />
 
                 <TextView
-                    android:id="@+id/price_discount"
+                    android:id="@+id/price_discount_history_purchase"
                     style="@style/TextRegular"
-                    android:layout_below="@+id/price_postal_fee"
+                    android:layout_below="@+id/price_postal_fee_history_purchase"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
                     android:text="Rp0"
@@ -296,7 +299,7 @@
                     android:textColor="@color/colorWhite" />
 
                 <TextView
-                    android:id="@+id/sub_total_checkout"
+                    android:id="@+id/total_checkout_history_purchase"
                     style="@style/TextRegular"
                     android:layout_below="@+id/view_divider_checkout"
                     android:layout_alignParentEnd="true"
