--- a/app/src/main/res/layout/activity_detail_history_purchase.xml
+++ b/app/src/main/res/layout/activity_detail_history_purchase.xml
@@ -36,135 +36,146 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
+        android:id="@+id/sv_detail_purchase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/ll_detail_history_purchase"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/no_invoice_detail_purchase"
-                style="@style/TextRegular"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginTop="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                tools:text="Terimakasih telah berbelanja di Kawarung. Transaksi anda dengan invoice INV000052 telah dicatat"
-                android:textSize="14sp" />
-
-            <TextView
-                style="@style/TextSemiBold"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:text="BATAS WAKTU PEMBAYARAN"
-                android:textColor="@color/boulder" />
-
-            <TextView
-                android:id="@+id/deadline_invoice"
-                style="@style/TextSemiBold"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:textSize="14sp"
-                tools:text="01 Juli 2020, 07:00" />
-
-            <TextView
-                style="@style/TextSemiBold"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:text="TOTAL BAYAR"
-                android:textColor="@color/boulder" />
-
-            <TextView
-                android:id="@+id/total_payment_detail_history_purchase"
-                style="@style/TextSemiBold"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:textSize="14sp"
-                tools:text="Rp9.500" />
-
-            <TextView
-                style="@style/TextRegular"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:text="Silakan transfer ke rekening tujuan berikut, a.n Obi Ismail :"
-                android:textSize="14sp" />
-
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/confirm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:background="@color/colorWhiteSmoke">
-
-                <ImageView
-                    android:id="@+id/logo_bank"
-                    android:layout_width="90dp"
-                    android:layout_height="56dp"
-                    android:layout_marginStart="10dp"
-                    android:src="@drawable/makanan_minuman" />
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/bank_name_of_logo"
+                    android:id="@+id/no_invoice_detail_purchase"
                     style="@style/TextRegular"
-                    android:layout_below="@+id/logo_bank"
-                    android:layout_marginStart="10dp"
-                    android:text="Bank Mandiri" />
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginTop="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:textSize="14sp"
+                    tools:text="Terimakasih telah berbelanja di Kawarung. Transaksi anda dengan invoice INV000052 telah dicatat" />
+
+                <TextView
+                    style="@style/TextSemiBold"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:text="BATAS WAKTU PEMBAYARAN"
+                    android:textColor="@color/boulder" />
+
+                <TextView
+                    android:id="@+id/deadline_invoice"
+                    style="@style/TextSemiBold"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:textSize="14sp"
+                    tools:text="01 Juli 2020, 07:00" />
+
+                <TextView
+                    style="@style/TextSemiBold"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:text="TOTAL BAYAR"
+                    android:textColor="@color/boulder" />
+
+                <TextView
+                    android:id="@+id/total_payment_detail_history_purchase"
+                    style="@style/TextSemiBold"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:textSize="14sp"
+                    tools:text="Rp9.500" />
 
                 <TextView
                     style="@style/TextRegular"
-                    android:layout_below="@+id/bank_name_of_logo"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="9.4dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="No Rekening: 1010010240263" />
-
-                <TextView
-                    style="@style/TextRegular"
-                    android:layout_below="@+id/bank_name_of_logo"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="9.4dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/orange_a200"
-                    android:paddingStart="10dp"
-                    android:paddingTop="2dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="2dp"
-                    android:text="Salin"
-                    android:textColor="@color/colorWhite" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginTop="10.6dp"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:background="@drawable/bg_rounded"
-                android:backgroundTint="@color/colorRed">
-
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="15dp"
-                    android:src="@drawable/ic_share"
-                    android:tint="@color/colorWhite" />
-
-                <TextView
-                    style="@style/TextTitleSemiBold"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="Konfirmasi Pembayaran"
-                    android:textColor="@color/colorWhite"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:text="Silakan transfer ke rekening tujuan berikut, a.n Obi Ismail :"
                     android:textSize="14sp" />
-            </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:background="@color/colorWhiteSmoke">
+
+                    <ImageView
+                        android:id="@+id/logo_bank"
+                        android:layout_width="90dp"
+                        android:layout_height="56dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/makanan_minuman" />
+
+                    <TextView
+                        android:id="@+id/bank_name_of_logo"
+                        style="@style/TextRegular"
+                        android:layout_below="@+id/logo_bank"
+                        android:layout_marginStart="10dp"
+                        android:text="Bank Mandiri" />
+
+                    <TextView
+                        style="@style/TextRegular"
+                        android:layout_below="@+id/bank_name_of_logo"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="9.4dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="No Rekening: 1010010240263" />
+
+                    <TextView
+                        style="@style/TextRegular"
+                        android:layout_below="@+id/bank_name_of_logo"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="9.4dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@color/orange_a200"
+                        android:paddingStart="10dp"
+                        android:paddingTop="2dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="2dp"
+                        android:text="Salin"
+                        android:textColor="@color/colorWhite" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginTop="10.6dp"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:background="@drawable/bg_rounded"
+                    android:backgroundTint="@color/colorRed">
+
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:src="@drawable/ic_share"
+                        android:tint="@color/colorWhite" />
+
+                    <TextView
+                        style="@style/TextTitleSemiBold"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="Konfirmasi Pembayaran"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="14sp" />
+                </RelativeLayout>
+
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -201,9 +212,10 @@
                             tools:text="Invoice: INV000053" />
 
                         <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rv_sub_item"
+                            android:id="@+id/rv_detail_history_purchase"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            app:fastScrollEnabled="false" />
 
                     </LinearLayout>
 
@@ -252,8 +264,8 @@
                     android:id="@+id/qty_detail_history_purchase"
                     style="@style/TextRegular"
                     android:layout_alignParentEnd="true"
-                    android:text="1"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    tools:text="1" />
 
                 <TextView
                     android:id="@+id/price_sub_total_history_purchase"
@@ -261,8 +273,8 @@
                     android:layout_below="@+id/tv_total_qty"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
-                    android:text="Rp12.000"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    tools:text="Rp12.000" />
 
                 <TextView
                     android:id="@+id/price_postal_fee_history_purchase"
@@ -270,8 +282,8 @@
                     android:layout_below="@+id/price_sub_total_history_purchase"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
-                    android:text="Rp10.000"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    tools:text="Rp10.000" />
 
                 <TextView
                     android:id="@+id/price_discount_history_purchase"
@@ -279,8 +291,8 @@
                     android:layout_below="@+id/price_postal_fee_history_purchase"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
-                    android:text="Rp0"
-                    android:textColor="@color/colorWhite" />
+                    tools:text="Rp0"
+                    tools:textColor="@color/colorWhite" />
 
                 <View
                     android:id="@+id/view_divider_checkout"
@@ -304,8 +316,8 @@
                     android:layout_below="@+id/view_divider_checkout"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="7dp"
-                    android:text="Rp22.000"
-                    android:textColor="@color/colorWhite" />
+                    android:textColor="@color/colorWhite"
+                    tools:text="Rp22.000" />
 
             </RelativeLayout>
 
@@ -318,6 +330,7 @@
                 android:textColor="@color/boulder" />
 
             <TextView
+                android:id="@+id/address_detail_purchase"
                 style="@style/TextRegular"
                 android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginEnd="@dimen/margin_space"
@@ -339,11 +352,12 @@
                 android:textColor="@color/boulder" />
 
             <TextView
+                android:id="@+id/note_detail_history_purchase"
                 style="@style/TextRegular"
                 android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginEnd="@dimen/margin_space"
-                android:textSize="14sp"
-                tools:text="-" />
+                android:text="-"
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
@@ -352,33 +366,72 @@
                 android:background="@color/colorGray" />
 
             <TextView
-                android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space"
-                android:id="@+id/status_history"
+                android:id="@+id/status_detail_history_purchase"
                 style="@style/TextRegular"
                 android:layout_width="match_parent"
+                android:layout_marginStart="@dimen/margin_space"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="@dimen/margin_space"
                 android:background="@color/colorWhiteSmoke"
                 android:padding="10dp"
                 tools:text="Status: Menunggu Pembayaran" />
 
             <RelativeLayout
-                android:layout_marginEnd="@dimen/margin_space"
-                android:layout_marginBottom="31.5dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_space"
+                android:layout_marginBottom="31.5dp">
 
                 <TextView
-                    android:textColor="@color/colorRed"
+                    style="@style/TextRegular"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
                     android:text="Lihat Riwayat Status >"
-                    style="@style/TextRegular"/>
+                    android:textColor="@color/colorRed" />
 
             </RelativeLayout>
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/pending_shipment_detail_purchase"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_marginBottom="@dimen/margin_space"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:textColor="@color/colorBlack"
+                    android:text="Barang Tidak Sesuai"
+                    android:background="@drawable/btn_bg_rounded_white"
+                    style="@style/ButtonGradient"/>
+
+                <Button
+                    android:layout_marginBottom="@dimen/margin_space"
+                    android:layout_marginStart="@dimen/margin_space"
+                    android:layout_marginEnd="@dimen/margin_space"
+                    android:text="Barang Telah Diterima"
+                    android:backgroundTint="@color/colorRed"
+                    android:background="@drawable/bg_rounded"
+                    style="@style/ButtonGradient"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/pg_loading"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
