--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,9 +18,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_below="@+id/toolbar_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_login"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,9 +48,9 @@
                 android:id="@+id/layout_input_email_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:hintEnabled="false"
                 android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space">
+                android:layout_marginEnd="@dimen/margin_space"
+                app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edt_email_phone_login"
@@ -71,9 +71,9 @@
                 android:id="@+id/layout_input_password_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:hintEnabled="false"
                 android:layout_marginStart="@dimen/margin_space"
-                android:layout_marginEnd="@dimen/margin_space">
+                android:layout_marginEnd="@dimen/margin_space"
+                app:hintEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edt_password_login"
@@ -107,8 +107,8 @@
 
                 <com.facebook.shimmer.ShimmerFrameLayout
                     android:id="@+id/sh_login"
-                    android:layout_height="40dp"
                     android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:text="@string/login"
                     android:visibility="gone">
 
@@ -122,14 +122,14 @@
                             android:layout_height="45dp" />
 
                         <TextView
-                            android:fontFamily="@font/poppins_semi_bold"
-                            android:textSize="14sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_centerHorizontal="true"
+                            android:fontFamily="@font/poppins_semi_bold"
                             android:text="@string/please_wait"
-                            android:textColor="@color/colorWhite" />
+                            android:textColor="@color/colorWhite"
+                            android:textSize="14sp" />
                     </RelativeLayout>
 
                 </com.facebook.shimmer.ShimmerFrameLayout>
@@ -185,11 +185,18 @@
 
 
                 <LinearLayout
+                    android:id="@+id/imgbtn_fb_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_background_social_media"
                     android:orientation="horizontal"
                     android:padding="7dp">
+
+                    <com.facebook.login.widget.LoginButton
+                        android:id="@+id/btn_fb_login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
 
                     <ImageView
                         android:layout_width="30dp"
@@ -246,10 +253,10 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/margin_space"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/margin_space"
         android:gravity="center"
         android:orientation="horizontal">
 
