fix state empty history purchase

--- a/app/src/main/res/layout/activity_history_status.xml
+++ b/app/src/main/res/layout/activity_history_status.xml
@@ -27,7 +27,7 @@
             <TextView
                 style="@style/TextRegular"
                 android:layout_gravity="center_horizontal"
-                android:text="Checkout Berhasil"
+                android:text="Riwayat Status"
                 android:textColor="@color/colorWhite"
                 android:textSize="20sp" />
 
