--- a/app/src/main/res/layout/activity_detail_history_purchase.xml
+++ b/app/src/main/res/layout/activity_detail_history_purchase.xml
@@ -383,6 +383,7 @@
                 android:layout_marginBottom="31.5dp">
 
                 <TextView
+                    android:id="@+id/status_history_purchase"
                     style="@style/TextRegular"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
