--- a/app/src/main/res/layout/activity_history_status.xml
+++ b/app/src/main/res/layout/activity_history_status.xml
@@ -36,6 +36,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_history_status"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
